# subspace

./: .gitignore  CMakeLists.txt  LICENSE  README.md  log.txt
doc/: Doxyfile  make.bat
doc/source/: conf.py  index.rst
doc/source/api/engine/util/: config.rst  logger.rst
doc/source/api/engine/video/: video.rst  video_exception.rst  window.rst
lib/cmake-modules/: FindSDL2.cmake  FindSDL2_image.cmake
rc/: logo.ai
rc/shaders/test/: frag.spv  test.frag  test.vert  vert.spv
src/: main.cpp
src/engine/: config.cpp  config.hpp  subspace.hpp
src/engine/entity/: Event.hpp  Observer.hpp  Subject.cpp  Subject.hpp
src/engine/math/: math.hpp  vec2.hpp
src/engine/util/: config.cpp  config.hpp  logger.cpp  logger.hpp  simple_file.cpp  simple_file.hpp  util.hpp
src/engine/video/: render_context.cpp  render_context.hpp  render_context_impl.cpp  render_context_impl.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shader_impl.hpp  swapchain.cpp  swapchain.hpp  video.cpp  video.hpp  video_exception.cpp  video_exception.hpp  window.cpp  window.hpp  window_impl.cpp  window_impl.hpp
src/engine/video/internal/: presentation_queue.hpp
src/engine/video/old/: render_context.hpp  renderer.hpp  video.hpp  video_exception.hpp
src/engine/video/old/internal/: presentation_queue.cpp
src/engine/video/old/wrappers/: sdl_window.cpp  vulkan_framebuffers.hpp  vulkan_instance.cpp  vulkan_logical_device.cpp  vulkan_physical_device.cpp  vulkan_physical_device.hpp  vulkan_pipeline_layout.cpp  vulkan_pipeline_layout.hpp  vulkan_render_pass.cpp  vulkan_shader_module.hpp  vulkan_surface.cpp  vulkan_surface.hpp
src/engine/video/sdl/: sdl_renderer.cpp  sdl_renderer.hpp  sdl_window.cpp  sdl_window.hpp  sprite.hpp  texture_factory.cpp  texture_factory.hpp
src/engine/video/vulkan/: context.cpp  context.hpp  physical_device.cpp  physical_device.hpp  sdl_window.cpp  sdl_window.hpp  swapchain.cpp  swapchain.hpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_window.cpp  vulkan_window.hpp
src/engine/video/wrappers/: sdl_window.cpp  sdl_window.hpp  vulkan_framebuffers.cpp  vulkan_instance.cpp  vulkan_instance.hpp  vulkan_logical_device.cpp  vulkan_logical_device.hpp  vulkan_physical_device.cpp  vulkan_physical_device.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_primary_command_buffers.cpp  vulkan_primary_command_buffers.hpp  vulkan_render_pass.cpp  vulkan_render_pass.hpp  vulkan_shader_module.cpp  vulkan_surface.cpp  vulkan_surface.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
subspace.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  subspace.lastbuildstate
